[tool.poetry]
name = "assignment5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
coppeliasim-zmqremoteapi-client = "^2.0.4"
matplotlib = "^3.9.2"
torch = "^2.5.1"
tensorflow = "^2.18.0"
kagglehub = "^0.3.4"
pandas = "^2.2.3"
keras = "^3.7.0"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
